# sapling

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Architecture.md  Benchmark.md  Comparison.md  demo.cast
scripts/: demo.sh
scripts/bench/: README.md  git_add.sh  git_commit.sh  git_init.sh  git_merge.sh  sapling_add.sh  sapling_commit.sh  sapling_init.sh  sapling_merge.sh  sappling_add.sh  sappling_commit.sh  sappling_init.sh  sappling_merge.sh
src/sapling/: __init__.py  cli.py  plumbing.py
src/sapling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/sappling/: __init__.py  cli.py  index.py  objects.py  plumbing.py  repository.py
src/sappling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_branch_checkout.py  test_commit.py  test_hash_object.py  test_index.py  test_init.py  test_log.py  test_merge.py  test_status_diff.py
tests/integration/: test_git_parity.py
